added css file and updated both html and css files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,57 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+
+        <!-- header starts-->
+        <div class="header">
+            <div class="wrapper ">
+                <div class="info">
+                    <div class="no">
+                        <p>
+                            +565 975 658
+                        </p>
+                    </div>
+                    <div class="mail">
+                        <p>
+                            info@premiumcoding.com
+                        </p>
+                    </div>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <li>MY ACCOUNT</li>
+                        <li>LOGIN</li>
+                        <li>CHECKOUT</li>
+                        <li>SIGN UP</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- header end-->
+
+        <!-- bullsy starts-->
+        <div class="bullsy">
+            <div class="wrapper">
+                <div class="logo">
+                    <h1>
+                        BULLSY
+                    </h1>
+                    <p>
+                        RUGGED SHOES STORE
+                    </p>
+                    <img src="logo_icon.png" alt="logo_icon" class="logo_icon">
+                </div>
+            </div>
+        </div>
+
+
+        <!-- header starts-->
+
+
+
+    </body>
 </html>
