css is not correct.

--- a/index.html
+++ b/index.html
@@ -5,51 +5,65 @@
     </head>
     <body>
 
-        <!-- header starts-->
-        <div class="header">
-            <div class="wrapper ">
-                <div class="info">
-                    <div class="no">
-                        <p>
+        <!-- topbar starts-->
+        <div class="Topbar_Wrapper container-fluid fix">
+            <div class="Topbar container ">
+                <div class="Contact pull-left">
+                    <div class="Mobile pull-left">
+                        <img src="phone_icon.png" alt="mobile">
+                        <span>
                             +565 975 658
-                        </p>
+                        </span>
                     </div>
-                    <div class="mail">
-                        <p>
+                    <div class="mail pull-left">
+                        <img src="email_icon.png" alt="email">
+                        <span>
                             info@premiumcoding.com
-                        </p>
+                        </span>
                     </div>
                 </div>
-                <div class="nav">
+                <div class="top_menu pull-right">
                     <ul>
-                        <li>MY ACCOUNT</li>
-                        <li>LOGIN</li>
-                        <li>CHECKOUT</li>
-                        <li>SIGN UP</li>
-
+                        <li><a href= "#">MY ACCOUNT</a></li>
+                        <li><a href= "#">LOGIN</a></li>                  
+                        <li><a href= "#">CHECKOUT</a></li>
+                        <li><a href= "#">SIGN UP</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <!-- header end-->
+        <!-- topbar end-->
 
-        <!-- bullsy starts-->
-        <div class="bullsy">
-            <div class="wrapper">
-                <div class="logo">
-                    <h1>
+        <!-- header starts-->
+        <div class="Header_Wrapper container-fluid fix">
+            <div class="Header container">
+                <div class="logo pull-left">
+                    <h1 class="logo_text">
                         BULLSY
                     </h1>
                     <p>
                         RUGGED SHOES STORE
                     </p>
-                    <img src="logo_icon.png" alt="logo_icon" class="logo_icon">
+                    <div class="logo_icon pull-left">
+                        <img src="logo_icon.png" alt="logo_icon">
+                    </div>
+                </div>
+                <div class="Navigation pull-left">
+                    <div class="nav">
+                        <ul>
+                            <li>HOME</li>
+                            <li>APPAREL</li>
+                            <li>FASHION</li>
+                            <li>CONTACT US</li>
+    
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
 
 
-        <!-- bullsy end-->
+        <!-- header end-->
 
 
 
